# learning-hdl

./: .gitmodules  CMakeLists.txt  GCD.v  gcd_main.cpp  gcd_test_01.cpp  make.py  py_wrapper.cpp  test.py
I2C/: i2c-01.vhd  i2c-02.vhd  i2c.vhd  i2c_manual_tb.vhd  i2c_tb_template.vhd  i2c_test.py  i2c_testbench_clock_stretch.vhd  i2c_testbench_start_condition.vhd
SpinalHDL/EncoderWithDisplay/: README.md  build.sbt  build.sc
SpinalHDL/EncoderWithDisplay/hw/spinal/main/: Config.scala  EncoderCounterWithDisplay.scala  EncoderDebouncer.scala  MultiDigitBcdCounter.scala  MultiDigitDisplayCtrl.scala  MyTopLevel.scala  SevenSegmentTranscoder.scala  SingleDigitBcdCounter.scala
encoder/: 7seg-test.vhd  7seg.vhd  counter-test.vhd  counter-with-maciek.vhd  counter.vhd  counter_tb.ghw  display.vhd  time-measure.vhd  top_level.vhd
encoder2/: clock_generator.vhd  counter.vhd  debouncer.vhd  display_seg_ctrl.vhd  mimas_v2.ucf  single_digit_bcd_counter.vhd  top_level.vhd
encoder3/: encoder.ghw  encoder_debouncer.vhd  encoder_debouncer_tb.vhd  single_digit_bcd_counter_synch.vhd  work-obj93.cf
encoder4/: encoder_debouncer.vhd  encoder_debouncer_tb.vhd
encoder5/: clock_generator.vhd  counter.vhd  debouncer.vhd  display_seg_ctrl.vhd  impulse_measurement.vhd  mimas_v2.ucf  mode_selector.vhd  seven_seg.vhd  single_digit_bcd_counter.vhd  top_level.vhd
gcd/: GCD.v
misc/: counter-1.vhd  counter-2.vhd  counter-tb.vhd  counter.vhd  counter_tb.ghw  lut.vhd  memory.vhd  monostable.ghw  monostable_tb.vhd  ripple_carry_adder.vhd  test-01.vhd  test-seq.vhd  test.vhd  ucy74121.vhd
(+4 files in other folders)
